--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ button.more {
 
 img.portfolio_img {
   width: 100%;
-  height: 320px;
+  height: auto;
   margin-bottom: -3px;
 }
 
@@ -479,6 +479,21 @@ img.portfolio_img {
   border-radius: 50%;
   background-color: #222;
   margin: 0 auto;
+}
+
+.coder {
+  background-image: url("../images/team_21.jpg");
+  background-position: 50% 47%;
+}
+
+.marketer {
+  background-image: url("../images/team_30.jpg");
+  background-position: 50% 50%;
+}
+
+.designer {
+  background-image: url("../images/team_10.jpg");
+  background-position: 53% 20%;
 }
 
 .team .scope {
@@ -681,7 +696,6 @@ input[type="submit"]:hover {
 
 @media (max-width: 1240px) {
   .portfolio_item {
-    /* flex-basis: 32%; */
     margin-bottom: 30px;
   }
 
@@ -758,10 +772,6 @@ input[type="submit"]:hover {
   .top_header {
     padding: 40px 60px 20px;
   }
-
-  img.portfolio_img {
-    height: 300px;
-  }
 }
 
 @media (max-width: 960px) {
@@ -781,14 +791,11 @@ input[type="submit"]:hover {
     padding: 0 40px;
   }
 
-  img.portfolio_img {
-    height: 350px;
-  }
-
   .contact_row {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
   }
+
   textarea.textarea {
     height: 230px;
   }
@@ -799,6 +806,10 @@ input[type="submit"]:hover {
 }
 
 @media (max-width: 768px) {
+  .header {
+    background-position: 47%;
+  }
+
   .services,
   .portfolio,
   .about,
@@ -809,7 +820,7 @@ input[type="submit"]:hover {
 
   .top_header {
     position: relative;
-    margin-bottom: 250px;
+    margin-bottom: 150px;
   }
 
   .navigation ul {
@@ -829,7 +840,7 @@ input[type="submit"]:hover {
   }
 
   li.menu_item {
-    padding: 7px;
+    padding: 5px;
     margin: 0;
   }
 
@@ -837,16 +848,17 @@ input[type="submit"]:hover {
     padding: 0 20px;
   }
 
-  img.portfolio_img {
-    height: 300px;
-  }
-
   .photo {
     width: 190px;
     height: 190px;
   }
+
   .team_block .col_3 {
     padding: 5px;
+  }
+
+  button.more {
+    margin-bottom: 80px;
   }
 
   input[type="text"],
@@ -858,10 +870,6 @@ input[type="submit"]:hover {
 }
 
 @media (max-width: 640px) {
-  img.portfolio_img {
-    height: 250px;
-  }
-
   .text {
     margin-bottom: 50px;
   }
@@ -869,10 +877,12 @@ input[type="submit"]:hover {
   h1.title {
     font-size: 54px;
   }
+
   h3.top_title {
     font-size: 38px;
   }
 }
+
 @media (max-width: 604px) {
   .team_block {
     -ms-flex-wrap: wrap;
@@ -897,6 +907,7 @@ input[type="submit"]:hover {
   .portfolio_item {
     padding: 0 10px;
   }
+
   .service_block {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
@@ -922,6 +933,7 @@ input[type="submit"]:hover {
     width: 186px;
     height: 84px;
   }
+
   textarea.textarea {
     height: 200px;
   }
@@ -943,20 +955,14 @@ input[type="submit"]:hover {
 }
 
 @media (max-width: 500px) {
-  img.portfolio_img {
-    height: 350px;
-  }
   .portfolio .col_3 {
     width: 100%;
-  }
-
-  img.portfolio_img {
-    height: 350px;
   }
 
   .portfolio_item {
     padding: 0 40px;
   }
+
   .team_block .col_3 {
     width: 100%;
   }
@@ -975,16 +981,19 @@ input[type="submit"]:hover {
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
+
   .row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
   }
+
   .about_info {
     margin: 20px 0;
     text-align: center;
   }
+
   .margin_r,
   .margin_l {
     margin: 40px auto;
@@ -1004,9 +1013,6 @@ input[type="submit"]:hover {
 }
 
 @media (max-width: 420px) {
-  img.portfolio_img {
-    height: 300px;
-  }
 }
 
 @media (max-width: 400px) {
